# mtm

./: .gitignore  CMakeLists.txt
ex0/part1/: part1.c
ex0/part2/: mtm_buggy.c
ex1/: chessSystem.c  chessSystem.h  game.c  game.h  makefile  player.c  player.h  player_levels.c  player_levels.h  tournament.c  tournament.h
ex1/dry/: 2_1.c  dan_2_2.c  levi_2_2.c
ex1/mtm_map/: map.c  map.h
ex1/tests/: chessSystemTestsExample.c  map_example_test.c  player_levels_expected_output.txt  tournament_statistics_expected_output.txt
ex2/: CMakeLists.txt  examDetails.cpp  part_a_output.txt  part_a_test.cpp  sortedList.cpp  sortedList.h
ex2/partA/: SortedList.h  examDetails.cpp  examDetails.h  part_a_output.txt  part_a_test.cpp  sortedList.h
ex2/partB/: Auxiliaries.cpp  Auxiliaries.h  Character.cpp  Character.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  gameExpectedOutput.txt
ex3/: gradesCalc.py  test.py
ex3/tests/: input
